// modified from https://github.com/databendlabs/openraft/blob/c4a47d1ac1e8f5a136f854d9ca29c4695c3f2cfa/examples/raft-kv-memstore-grpc/proto/raft.proto#L144 and https://github.com/databendlabs/openraft/blob/c4a47d1ac1e8f5a136f854d9ca29c4695c3f2cfa/examples/raft-kv-memstore-grpc/proto/app.proto#L63
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package silo.membership.v1;

// Node represents a single node in the Raft cluster
message Node {
  // Unique identifier for the node
  uint64 node_id = 1;
  // RPC address for node communication
  string rpc_addr = 2;
}

// LeaderId represents the leader identifier in Raft
message LeaderId {
  uint64 term = 1;
  uint64 node_id = 2;
}

// Vote represents the voting information in Raft leader election
message Vote {
  LeaderId leader_id = 1;
  bool committed = 2;
}

message Entry {
  uint64 term = 1;
  uint64 index = 2;

  // Optional Membership config
  Membership membership = 3;
}

// NodeIds is a set of NodeIds
message NodeIdSet {
  map<uint64, google.protobuf.Empty> node_ids = 1;
}

// Membership config
message Membership {
  // Joint(includes more than one NodeIdSet) or uniform(one NodeIdSet) config.
  repeated NodeIdSet configs = 1;

  // All of the nodes in the cluster, including voters and learners.
  // A node id that is included in `configs` is a voter, otherwise it is a learner.
  map<uint64, Node> nodes = 2;
}

// LogId represents the log identifier in Raft
message LogId {
  uint64 term = 1;
  uint64 index = 2;
}

// VoteRequest represents a request for votes during leader election
message VoteRequest {
  Vote vote = 1;
  LogId last_log_id = 2;
}

// VoteResponse represents the response to a vote request
message VoteResponse {
  Vote vote = 1;
  bool vote_granted = 2;
  LogId last_log_id = 3;
}

message AppendEntriesRequest {
  // The leader's vote, used to identify the leader, and must be committed
  Vote vote = 1;

  // The previous log id the leader has sent to the follower
  LogId prev_log_id = 2;

  // The entries to be appended to the follower's log
  repeated Entry entries = 3;

  // The leader's last committed log id
  LogId leader_commit = 4;
}

message AppendEntriesResponse {
  // If not None, the follower rejected the AppendEntries request due to having a higher vote.
  // All other fields are valid only when this field is None
  Vote rejected_by = 1;

  // The follower accepts this AppendEntries request's vote, but the prev_log_id conflicts with
  // the follower's log. The leader should retry with a smaller prev_log_id that matches the
  // follower's log. All subsequent fields are valid only when this field is false
  bool conflict = 2;

  // The last log id the follower accepted from this request.
  // If None, all input entries were accepted and persisted.
  // Otherwise, only entries up to and including this id were accepted
  LogId last_log_id = 3;
}

// The first chunk of snapshot transmission, which contains the snapshot meta.
message SnapshotRequestMeta {
  Vote vote = 1;

  LogId last_log_id = 2;

  LogId last_membership_log_id = 3;

  Membership last_membership = 4;

  string snapshot_id = 5;
}

// The item of snapshot chunk stream.
//
// The first item contains `meta`, including the leader vote and snapshot-meta.
//
// Since the second item, the chunk contains the snapshot data.
message SnapshotRequest {
  oneof payload {
    SnapshotRequestMeta meta = 1;
    bytes chunk = 2;
  }
}

message SnapshotResponse {
  Vote vote = 1;
}

// All the data in a state machine, including user defined data and membership data.
message StateMachineData {
  // The last log id that has been applied to the state machine
  LogId last_applied = 1;

  // User data in a map
  map<string, string> data = 2;

  // The id of the last membership config log entry that is applied.
  LogId last_membership_log_id = 3;

  // The last membership config that is applied.
  Membership last_membership = 4;
}

// InitRequest contains the initial set of nodes for cluster initialization
message InitRequest {
  // List of initial cluster nodes
  repeated Node nodes = 1;
}

// AddLearnerRequest specifies parameters for adding a learner node
message AddLearnerRequest {
  // Node to be added as a learner
  Node node = 1;
}

// ChangeMembershipRequest specifies parameters for modifying cluster membership
message ChangeMembershipRequest {
  // New set of voter node IDs
  repeated uint64 members = 1;
  // Whether to retain existing configuration
  bool retain = 2;
}

message SetRequest {
}

message Response {
}

message ClientWriteResponse {
  // The log id of the committed log entry.
  LogId log_id = 1;

  // If the committed log entry is a normal one.
  Response data = 2;

  // If the committed log entry is a change-membership entry.
  Membership membership = 3;
}

message MetricsResponse {
  // Cluster membership config
  Membership membership = 1;

  // In this example, only membership is used.
  // Other metrics are just encoded in string for simplicity.
  // In real-world scenarios, metrics should be encoded in a more structured format.
  string other_metrics = 2;
}

// MembershipService handles internal Raft cluster communication
service MembershipService {
  // Init initializes a new Raft cluster with the given nodes
  rpc Init(InitRequest) returns (google.protobuf.Empty) {}

  // Vote handles vote requests between Raft nodes during leader election
  rpc Vote(VoteRequest) returns (VoteResponse) {}

  // AppendEntries handles call related to append entries RPC
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}

  // Snapshot handles install snapshot RPC
  rpc Snapshot(stream SnapshotRequest) returns (SnapshotResponse) {}

  // AddLearner adds a new learner node to the Raft cluster
  rpc AddLearner(AddLearnerRequest) returns (ClientWriteResponse) {}

  // ChangeMembership modifies the cluster membership configuration
  rpc ChangeMembership(ChangeMembershipRequest) returns (ClientWriteResponse) {}
}
